@@ -6,6 +6,11 @@ Version 1.12.4+dev:
  * Language and i18n:
    * Updated translations: Latvian
 
+ * User interface:
+   * Force uniform font rendering settings across X11 and Apple OS X, avoiding
+     color glitches resulting from incorrect applications of subpixel hinting
+     (bug #20337).
+
 
 Version 1.12.4:
  * Security fixes:
