@@ -13,6 +13,10 @@ Version 1.12.4+dev:
    * Fix scenario ending to early for players that are defeated if there are
      still players fighting and victory_when_enemies_defeated=no.
    * Fix 'enemies defated' event causing OOS error in mp scenarios.
+ * User interface:
+   * Force uniform font rendering settings across X11 and Apple OS X, avoiding
+     color glitches resulting from incorrect applications of subpixel hinting
+     (bug #20337).
  * Miscellaneous and bug fixes:
    * Default to non-strict compilation with CMake.
    * Fixed strict compilation with clang 3.5 and 3.6.
